Added info page

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
                 class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="active">
-                <a href="index.html">Home</a>
-              </li>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li class="@@info"><a href="info.html">Infos zur Wohnung</a></li>
               <li class="@@contact"><a href="contact.html">Kontakt</a></li>
             </ul>
           </nav>
@@ -75,7 +74,7 @@
         <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
           <h1 class="mb-4">Willkommen in Schönried</h1>
           <p class="mb-5">Chalet Gassegüetli</p>
-          <p><a href="https://www.gstaad.ch/" target="_blank" class="btn btn-primary px-5 py-3">Entdecke die Region</a>
+          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Jetzt buchen</a>
           </p>
         </div>
       </div>
