--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
           <h1 class="mb-4">Willkommen in Schönried</h1>
           <p class="mb-5">Chalet Gassegüetli</p>
-          <p><a href="https://www.gstaad.ch/" target="_blank" class="btn btn-primary px-5 py-3">Entdecke die Region</a>
+          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Jetzt buchen</a>
           </p>
         </div>
       </div>
