--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,8 @@
                 class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="@@home">
-                <a href="index.html">Home</a>
-              </li>
+              <li class="@@home"><a href="index.html">Home</a></li>
+              <li class="@@info"><a href="info.html">Infos zur Wohnung</a></li>
               <li class="active"><a href="contact.html">Kontakt</a></li>
             </ul>
           </nav>
