Fixed titel on mobile

--- a/src/info.html
+++ b/src/info.html
@@ -11,8 +11,8 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white">Alle Informationen zur Wohnung</h1>
-          <p>Was du vor Ort wissen musst</p>
+          <h1 class="text-white">Alle Infos zur Wohnung</h1>
+          <p>Was ihr vor Ort wissen müsst</p>
         </div>
       </div>
     </div>
