--- a/src/_footer.html
+++ b/src/_footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="row pt-5 mt-5 text-center">
+    <div class="row pt-5 pb-5 text-center">
         <div class="col-md-12">
             <p>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
