--- a/en/index.html
+++ b/en/index.html
@@ -46,11 +46,11 @@
                 class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="active"><a href="/de/index.html">Home</a></li>
-              <li class="@@info"><a href="/de/info.html">Infos zur Wohnung</a></li>
-              <li class="@@contact"><a href="/de/contact.html">Kontakt</a></li>
+              <li class="active"><a href="/en/index.html">Home</a></li>
+              <li class="@@info"><a href="/en/info.html">Apartment Information</a></li>
+              <li class="@@contact"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
-                <a href="#">Sprache</a>
+                <a href="#">Language</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/index.html">Deutsch</a></li>
                   <li><a href="/en/index.html">English (incomplete)</a></li>
@@ -81,9 +81,9 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="mb-4">Willkommen in Schönried</h1>
+          <h1 class="mb-4">Welcome in Schönried</h1>
           <p class="mb-5">Chalet Gassegüetli</p>
-          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Jetzt buchen</a>
+          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Book now</a>
           </p>
         </div>
       </div>
@@ -95,8 +95,8 @@
     <div class="featured-property-half row">
       <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
       <div class="text col-md-6 col-sm-12">
-        <h2>Im Aufbau</h2>
-        <p class="mb-5">Diese Website befindet sich gerade noch im Aufbau.</p>
+        <h2>Under development</h2>
+        <p class="mb-5">This website is still under development.</p>
       </div>
     </div>
   </div>
