--- a/src/info.html
+++ b/src/info.html
@@ -6,13 +6,13 @@
 
   @@include('_nav.html', {"info": "active"})
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('images/hero_bg_2.jpg');"
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');"
     data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white">Alle Infos zur Wohnung</h1>
-          <p>Was ihr vor Ort wissen müsst</p>
+          <h1 class="text-white">${{ info.header.title }}$</h1>
+          <p>${{ info.header.subtitle }}$</p>
         </div>
       </div>
     </div>
@@ -24,133 +24,62 @@
       <div class="row">
 
         <div class="col-md-6">
-          <h2>Erste Hilfe & Feuerlöscher</h2>
-          <p>
-            Das Erste-Hilfe-Set findet ihr in der Kommode im Wohnzimmer. Erste Schublade von rechts.
-            Der Feuerlöscher steht links neben dem Kamin.
-          </p>
+          <h2>${{ info.first_aid.title }}$</h2>
+          <p>${{ info.first_aid.text }}$</p>
 
-          <h2>Fensterläden</h2>
-          <p>
-            Wenn bei eurer Ankunft die Fensterläden zu sind, einfach nach außen klappen und feststellen. Bei der
-            Abreise könnt ihr die die Läden gerne offen lassen.
-          </p>
+          <h2>${{ info.windows.title }}$</h2>
+          <p>${{ info.windows.text }}$</p>
 
-          <h2>Feedback</h2>
-          <p>
-            Wir freuen uns sehr über Feedback zu eurem Aufenthalt. Egal ob über die AirBnB Bewertung oder als
-            Nachricht an uns. Sagt auch gerne Bescheid, wenn es bei eurer Ankunft Beschädigungen gab, 
-            ob euch selbst etwas kaputt gegangen ist oder wenn ihr Ideen habt, wie wir die Unterkunft noch besser
-            gestalten können.
-          </p>
+          <h2>${{ info.feedback.title }}$</h2>
+          <p>${{ info.feedback.text }}$</p>
 
-          <h2>Fernseher</h2>
-          <p>
-            Mit dem Smart-TV könnt ihr einfach eure Lieblingssendungen auf Netflix oder Amazon Prime Video 
-            weiterschauen oder über die Apps oder den Browser beliebige andere Inhalte konsumieren. 
-            Er unter unterstützt auch AirPlay und Google Cast — wenn ihr im WiFi seid könnt ihr einfach Inhalte
-            an den Fernseher schicken.
-          </p>
-          <p>
-            Für eine einfacherer Steuerung können wir auch empfehlen, die LG TV Plus App als Fernbedienung 
-            zu verwenden. Der TV hat keinen Kabelanschluss — deswegen sagt er auch, er sei "nicht programmiert". 
-            Bevor ihr abreist, denkt daran, euch aus euren Accounts abzumelden.
-          </p>
+          <h2>${{ info.tv.title }}$</h2>
+          <p>${{ info.tv.text1 }}$</p>
+          <p>${{ info.tv.text2 }}$</p>
 
-          <h2>Gläser, Fondue & Raclette</h2>
-          <p>
-            Neben der Küche findet ihr in der Kommode in der Küche noch weitere Gläser. Dort findet ihr euch das
-            Caquelon für Fondue und das Raclette-Gerät.
-          </p>
+          <h2>${{ info.additional_equipment.title }}$</h2>
+          <p>${{ info.additional_equipment.text }}$</p>
 
-          <h2>Kontakt</h2>
-          <p>
-            Solltet ihr Fragen oder Probleme haben sind wir natürlich gerne für euch da. Kontaktiert uns entweder
-            über die AirBnB App oder nutzt die Kontaktmöglichkeit <a href="contact.html"> auf dieser Seite</a>.
-          </p>
+          <h2>${{ info.contact.title }}$</h2>
+          <p>${{ info.contact.text }}$</p>
 
-          <h2>Müll</h2>
-          <p>
-            Trennt bitte den Müll vor Ort. Der kleine Mülleimer im Wohnzimmer ist für Papier und Pappe, alles andere
-            könnt ihr im Mülleimer in der Küche entsorgen. Glas/Flaschen stellt einfach unter die Spüle.
-          </p>
-          <p>
-            Bitte beachtet, dass nur gebührenpflichte Müllsäcke entsorgt werden dürfen. Nutzt deswegen die Müllsäcke
-            vor Ort, wenn ihr selbst mal den Müll raus bringt.
-          </p>
+          <h2>${{ info.garbage.title }}$</h2>
+          <p>${{ info.garbage.text1 }}$</p>
+          <p>${{ info.garbage.text2 }}$</p>
 
-          <h2>Nachschub</h2>
-          <p>
-            Sollte euch Kaffee, Seife, etc. ausgehen, findet ihr im ganz linken Schrank im großen Schlafzimmer
-            Nachschub. Reinigungsmaterial, Schwämme, etc. findet ihr entweder im mittleren Schrank oder in der Küche
-            in dem Schrank rechts unten neben der Spüle.
-          </p> 
+          <h2>${{ info.supplies.title }}$</h2>
+          <p>${{ info.supplies.text }}$</p>
         </div>
 
         <div class="col-md-6 ml-auto">
-          <h2>Parken</h2>
-          <a href="images/map.png">
-            <img src="images/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="Karte mit Parkplätzen">
+          <h2>${{ info.parking.title }}$</h2>
+          <a href="/images/map.png">
+            <img src="/images/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="${{ info.parking.image }}$">
           </a>          
-          <p>
-            Es gibt einen Stellplatz in der Tiefgarage den ihr nutzen könnt. Wenn ihr vor dem Haus steht, 
-            einfach Richtung Hauptstraße zurück fahren und die erste Einfahrt links nehmen (1. auf der Karte). 
-            Der Wohnungsschlüssel passt in das untere Schloss der Säule und öffnet das Tor. 
-          </p>
-          <p>
-            Der Stellplatz ist ungefähr mittig auf der linken Seite und mit der Nummer 23 (Wohnung 7) beschriftet.
-            Über die Tür neben dem Parkplatz kommt ihr ins Treppenhaus.
-            Wenn ihr mit mehr als einem Fahrzeug angereist seid, könnt ihr auch den kostenlosen Parkplatz
-            gegenüber der Wohnung nutzen (2. auf der Karte).
-          </p>
+          <p>${{ info.parking.text1 }}$</p>
+          <p>${{ info.parking.text2 }}$</p>
 
-          <h2>Schlüssel</h2>
-          <p>
-            Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP.
-            Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum.
-          </p>
+          <h2>${{ info.keys.title }}$</h2>
+          <p>${{ info.keys.text }}$</p>
 
-          <h2>Skiraum</h2>
-          <p>
-            Ski- und Snowboardausrüstung bitte im Skiraum abstellen. Nicht mit den Skischuhen durch das Treppenhaus
-            gehen! Rechts vom Eingang findet ihr die Treppe die zum Skiraum führt.
-          </p>
+          <h2>${{ info.ski.title }}$</h2>
+          <p>${{ info.ski.text }}$</p>
 
-          <h2>Spülen</h2>
-          <p>
-            Wir freuen uns, wenn ihr euer Geschirr direkt abspült, damit sich kein Dreck fest setzt.  
-          </p>
+          <h2>${{ info.dishes.title }}$</h2>
+          <p>${{ info.dishes.text }}$</p>
 
-          <h2>Stecker-Adapter & Kabel</h2>
-          <p>
-            Stecker-Adapter, Mehrfachstecker und Verlängerungskabel findet ihr im Wohnzimmer in der Kommode. 
-            In der zweiten Schublade von rechts findet ihr was ihr sucht.  
-          </p>
+          <h2>${{ info.power.title }}$</h2>
+          <p>${{ info.power.text }}$</p>
 
-          <h2>Telefon</h2>
-          <p>
-            Ihr könnte das Telefon gerne für Telefonate in der Schweiz nutzen. Wenn ihr ins Ausland telefonieren wollt,
-            schmeißt bitte ein paar Franken in die "Wäschekasse" im linken Schrank im großen Schlafzimmer. 
-          </p>
+          <h2>${{ info.phone.title }}$</h2>
+          <p>${{ info.phone.text }}$</p>
 
-          <h2>Wäsche waschen</h2>
-          <p>
-            Im Haus steht eine Waschmaschine und ein Trockner gegen Gebühr zur Verfügung. Die Chip-Karte zur Nutzung
-            von beidem sowie Waschpulver findet ihr im linken Schrank im großen Schlafzimmer. Bitte werft für jeden 
-            Wasch-/Trockengang 5 CHF in die "Wäschkasse", die auch im Schrank steht (oder sagt uns Bescheid, wenn
-            ihr über Paypal/Überweisung bezahlen wollt).
-          </p>
-          <p>
-            Die Waschküche findet ihr im Keller. Am Ende vom Treppenhaus links durch die Tür und gleich wieder links.
-            Bitte beachtet die ausgehängten Anweisungen. Tragt euch vor allem in ausliegende Liste ein (Wohnung 7)
-            und hinterlasst die Waschküche sauber. Zur Bedienung, hier ein <a href="images/waschen.mp4">kleines Video</a> .
-          </p>
-          
-          <h2>WiFi</h2>
-          <p>
-            Die Zugangsdaten findet ihr auf der Begrüßungskarte vor Ort. Sollte der Router ausgeschaltet sein,
-            einfach den Stecker im Wohnzimmer einstecken und eine Weile warten.
-          </p>
+          <h2>${{ info.laundry.title }}$</h2>
+          <p>${{ info.laundry.text1 }}$</p>
+          <p>${{ info.laundry.text2 }}$</p>
+
+          <h2>${{ info.wifi.title }}$</h2>
+          <p>${{ info.wifi.text }}$</p>
         </div>
       </div>
     </div>
