--- a/en/contact.html
+++ b/en/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <title>Chalet Gassegüetli in Schönried</title>
     <meta charset="utf-8">
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<!-- trace:src/index.html -->
+<!-- trace:src/contact.html -->
 
   <div class="site-wrap">
 
@@ -46,14 +46,14 @@
                 class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="active"><a href="/de/index.html">Home</a></li>
-              <li class="@@info"><a href="/de/info.html">Infos zur Wohnung</a></li>
-              <li class="@@contact"><a href="/de/contact.html">Kontakt</a></li>
+              <li class="@@home"><a href="/en/index.html">Home</a></li>
+              <li class="@@info"><a href="/en/info.html">Apartment Information</a></li>
+              <li class="active"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
-                <a href="#">Sprache</a>
+                <a href="#">Language</a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="/de/index.html">Deutsch</a></li>
-                  <li><a href="/en/index.html">English (incomplete)</a></li>
+                  <li><a href="/de/contact.html">Deutsch</a></li>
+                  <li><a href="/en/contact.html">English (incomplete)</a></li>
                 </ul>
               </li>
 
@@ -76,27 +76,85 @@
   <div class="site-mobile-menu-body"></div>
 </div> <!-- .site-mobile-menu -->
 
-  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');" data-aos="fade"
-    data-stellar-background-ratio="0.5" data-aos="fade">
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_1.jpg');"
+    data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="mb-4">Willkommen in Schönried</h1>
-          <p class="mb-5">Chalet Gassegüetli</p>
-          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Jetzt buchen</a>
-          </p>
+        <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+          <h1 class="text-white">Kontaktiere uns</h1>
+          <p>Wir vermieten unsere Chalet-Wohnung gerne an euch</p>
         </div>
       </div>
     </div>
   </div>
 
 
-  <div class="container">
-    <div class="featured-property-half row">
-      <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
-      <div class="text col-md-6 col-sm-12">
-        <h2>Im Aufbau</h2>
-        <p class="mb-5">Diese Website befindet sich gerade noch im Aufbau.</p>
+
+  <div class="site-section border-bottom">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-12 col-lg-7 mb-5">
+
+
+
+          <form action="mailto:chalet.schoenried@gmail.com" class="contact-form">
+
+            <div class="row form-group">
+              <div class="col-md-12 mb-3 mb-md-0">
+                <label class="font-weight-bold" for="fullname">Name</label>
+                <input type="text" id="fullname" class="form-control" placeholder="Dein Name">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label class="font-weight-bold" for="email">Email</label>
+                <input type="email" id="email" class="form-control" placeholder="Email Addresse">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label class="font-weight-bold" for="email">Betreff</label>
+                <input type="text" id="subject" class="form-control" placeholder="Worum geht's?">
+              </div>
+            </div>
+
+
+            <div class="row form-group">
+              <div class="col-md-12">
+                <label class="font-weight-bold" for="message">Nachricht</label>
+                <textarea name="message" id="message" cols="30" rows="5" class="form-control"
+                  placeholder="Grüezi!"></textarea>
+              </div>
+            </div>
+
+            <div class="row form-group">
+              <div class="col-md-12">
+                <input type="submit" value="Abschicken" class="btn btn-primary py-3 px-4">
+              </div>
+            </div>
+
+
+          </form>
+        </div>
+
+        <div class="col-lg-4 ml-auto">
+          <div class="p-4 mb-3 bg-white">
+            <h3 class="h5 text-black mb-3">Kontakt</h3>
+            <p class="mb-0 font-weight-bold text-black">Inhaber</p>
+            <p class="mb-4 text-black">Simon & Nicolas Seyer</p>
+
+            <p class="mb-0 font-weight-bold text-black">Adresse</p>
+            <p class="mb-4 text-black">Hubelstrasse 6, 3778 Schönried, Schweiz</p>
+
+            <p class="mb-0 font-weight-bold text-black">Phone</p>
+            <p class="mb-4"><a href="phone:004915753644129">+49 157 53644129</a></p>
+
+            <p class="mb-0 font-weight-bold text-black">Email-Adresse</p>
+            <p class="mb-0"><a href="mailto:chalet.schoenried@gmail.com">chalet.schoenried@gmail.com</a></p>
+
+          </div>
+        </div>
       </div>
     </div>
   </div>
