--- a/en/info.html
+++ b/en/info.html
@@ -46,11 +46,11 @@
                 class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
-              <li class="@@home"><a href="/de/index.html">Home</a></li>
-              <li class="active"><a href="/de/info.html">Infos zur Wohnung</a></li>
-              <li class="@@contact"><a href="/de/contact.html">Kontakt</a></li>
+              <li class="@@home"><a href="/en/index.html">Home</a></li>
+              <li class="active"><a href="/en/info.html">Apartment Information</a></li>
+              <li class="@@contact"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
-                <a href="#">Sprache</a>
+                <a href="#">Language</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/info.html">Deutsch</a></li>
                   <li><a href="/en/info.html">English (incomplete)</a></li>
