--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
 
   @@include('_nav.html', {"home": "active"})
 
-  <div class="site-blocks-cover overlay" style="background-image: url('images/hero_bg_2.jpg');" data-aos="fade"
+  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');" data-aos="fade"
     data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="mb-4">Willkommen in Schönried</h1>
-          <p class="mb-5">Chalet Gassegüetli</p>
-          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Jetzt buchen</a>
+          <h1 class="mb-4">${{ index.header.title }}$</h1>
+          <p class="mb-5">${{ index.header.subtitle }}$</p>
+          <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">${{ index.header.book }}$</a>
           </p>
         </div>
       </div>
@@ -23,10 +23,10 @@
 
   <div class="container">
     <div class="featured-property-half row">
-      <div class="image col-md-6 col-sm-12" style="background-image: url('images/hero_bg_1.jpg')"></div>
+      <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
       <div class="text col-md-6 col-sm-12">
-        <h2>Im Aufbau</h2>
-        <p class="mb-5">Diese Website befindet sich gerade noch im Aufbau.</p>
+        <h2>${{ index.in-progress.title }}$</h2>
+        <p class="mb-5">${{ index.in-progress.text }}$</p>
       </div>
     </div>
   </div>
