--- a/de/contact.html
+++ b/de/contact.html
@@ -50,7 +50,7 @@
               <li class="@@info"><a href="/de/info.html">Infos zur Wohnung</a></li>
               <li class="active"><a href="/de/contact.html">Kontakt</a></li>
               <li class="has-children">
-                <a href="#">Sprache</a>
+                <a href="#">🇩🇪 Sprache</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/contact.html">Deutsch</a></li>
                   <li><a href="/en/contact.html">English (incomplete)</a></li>
