--- a/en/info.html
+++ b/en/info.html
@@ -50,7 +50,7 @@
               <li class="active"><a href="/en/info.html">Apartment Information</a></li>
               <li class="@@contact"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
-                <a href="#">Language</a>
+                <a href="#">🇬🇧 Language</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/info.html">Deutsch</a></li>
                   <li><a href="/en/info.html">English (incomplete)</a></li>
