--- a/de/index.html
+++ b/de/index.html
@@ -102,7 +102,7 @@
   </div>
 
   <footer>
-    <div class="row pt-5 pb-5 text-center">
+    <div class="pt-5 pb-5 text-center">
         <div class="col-md-12">
             <p>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
