Performed an automatic translation to English

--- a/en/info.html
+++ b/en/info.html
@@ -81,8 +81,8 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white">Alle Infos zur Wohnung</h1>
-          <p>Was ihr vor Ort wissen müsst</p>
+          <h1 class="text-white">All information about the apartment</h1>
+          <p>What you need to know on the ground</p>
         </div>
       </div>
     </div>
@@ -94,81 +94,81 @@
       <div class="row">
 
         <div class="col-md-6">
-          <h2>Erste Hilfe & Feuerlöscher</h2>
-          <p>Das Erste-Hilfe-Set findet ihr in der Kommode im Wohnzimmer.  Erste Schublade von rechts. Der Feuerlöscher steht links neben dem Kamin.
+          <h2>First Aid & Fire Extinguisher</h2>
+          <p>The first aid kit can be found in the chest of drawers in the living room.  First drawer from the right. The fire extinguisher is left of the fireplace.
 </p>
 
-          <h2>Fensterläden</h2>
-          <p>Wenn bei eurer Ankunft die Fensterläden zu sind, einfach nach außen klappen und feststellen.  Bei der Abreise könnt ihr die die Läden gerne offen lassen.
+          <h2>Shutters</h2>
+          <p>If the shutters are closed when you arrive, simply fold them out and lock them.  On departure you are welcome to leave the shutters open.
 </p>
 
           <h2>Feedback</h2>
-          <p>Wir freuen uns sehr über Feedback zu eurem Aufenthalt.  Egal ob über die AirBnB Bewertung oder als Nachricht an uns.  Sagt auch gerne Bescheid, wenn es bei eurer Ankunft Beschädigungen gab,  ob euch selbst etwas kaputt gegangen ist oder wenn ihr Ideen habt,  wie wir die Unterkunft noch besser gestalten können.
+          <p>We are very happy to receive feedback on your stay.  No matter if it is about the AirBnB review or as a message to us.  Please let us know if there was any damage on your arrival,  if you've broken something or if you have ideas,  how we can make the accommodation even better.
 </p>
 
-          <h2>Fernseher</h2>
-          <p>Mit dem Smart-TV könnt ihr einfach eure Lieblingssendungen auf Netflix oder Amazon Prime Video  weiterschauen oder über die Apps oder den Browser beliebige andere Inhalte konsumieren.  Er unter unterstützt auch AirPlay und Google Cast — wenn ihr im WiFi seid könnt ihr einfach Inhalte an den Fernseher schicken.
+          <h2>TV</h2>
+          <p>With the Smart TV you can easily watch your favourite shows on Netflix or Amazon Prime Video  or consume any other content via the apps or browser.  It also supports AirPlay and Google Cast - when you're on WiFi, you can easily watch content to the television set.
 </p>
-          <p>Für eine einfacherer Steuerung können wir auch empfehlen, die LG TV Plus App als Fernbedienung  zu verwenden. Der TV hat keinen Kabelanschluss — deswegen sagt er auch, er sei "nicht programmiert".  Bevor ihr abreist, denkt daran, euch aus euren Accounts abzumelden.
-</p>
-
-          <h2>Gläser, Fondue & Raclette</h2>
-          <p>Neben der Küche findet ihr in der Kommode in der Küche noch weitere Gläser.  Dort findet ihr euch das Caquelon für Fondue und das Raclette-Gerät.
+          <p>For easier control, we can also recommend using the LG TV Plus App as a remote control  to use. The TV has no cable connection - that's why he says it is "not programmed".  Before you leave, remember to log out of your accounts.
 </p>
 
-          <h2>Kontakt</h2>
-          <p>Solltet ihr Fragen oder Probleme haben sind wir natürlich gerne für euch da. Kontaktiert uns entweder über die AirBnB App oder nutzt die Kontaktmöglichkeit <a href="contact.html"> auf dieser Seite</a>.
+          <h2>Glasses, Fondue & Raclette</h2>
+          <p>Besides the kitchen you will find more glasses in the chest of drawers in the kitchen.  There you can find the caquelon for fondue and the raclette machine.
 </p>
 
-          <h2>Müll</h2>
-          <p>Trennt bitte den Müll vor Ort. Der kleine Mülleimer im Wohnzimmer ist für Papier und Pappe, alles andere könnt ihr im Mülleimer in der Küche entsorgen. Glas/Flaschen stellt einfach unter die Spüle.
-</p>
-          <p>Bitte beachtet, dass nur gebührenpflichte Müllsäcke entsorgt werden dürfen. Nutzt deswegen die Müllsäcke vor Ort, wenn ihr selbst mal den Müll raus bringt.
+          <h2>contact</h2>
+          <p>If you have any questions or problems we are of course here for you. Contact us either via the AirBnB App or use the contact option <a href="contact.html"> on this page</a>.
 </p>
 
-          <h2>Nachschub</h2>
-          <p>Sollte euch Kaffee, Seife, etc. ausgehen, findet ihr im ganz linken Schrank im großen Schlafzimmer Nachschub. Reinigungsmaterial, Schwämme, etc. findet ihr entweder im mittleren Schrank oder in der Küche in dem Schrank rechts unten neben der Spüle.
+          <h2>Garbage</h2>
+          <p>Please separate the waste on site. The small trash can in the living room is for paper and cardboard, everything else you can throw it in the trash can in the kitchen. Simply place glass/bottles under the sink.
+</p>
+          <p>Please note that only refuse bags that have to be paid for can be disposed of. Therefore use the garbage bags on the spot, if you guys take out the trash yourselves.
+</p>
+
+          <h2>Supplies</h2>
+          <p>Should you run out of coffee, soap, etc., you will find the following in the leftmost cupboard in the large bedroom Supplies. Cleaning material, sponges, etc. can be found either in the middle cupboard or in the kitchen in the cupboard down right next to the sink.
 </p>
         </div>
 
         <div class="col-md-6 ml-auto">
-          <h2>Parken</h2>
+          <h2>Parking</h2>
           <a href="/images/map.png">
-            <img src="/images/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="Karte mit Parkplätzen">
+            <img src="/images/map.png" class="pt-2 pr-5 pb-4" style="width: 100%;" alt="Map with parking spaces">
           </a>          
-          <p>Es gibt einen Stellplatz in der Tiefgarage den ihr nutzen könnt. Wenn ihr vor dem Haus steht,  einfach Richtung Hauptstraße zurück fahren und die erste Einfahrt links nehmen (1. auf der Karte).  Der Wohnungsschlüssel passt in das untere Schloss der Säule und öffnet das Tor.
+          <p>There is a parking space in the underground car park which you can use. If you stand in front of the house,  just drive back towards the main road and take the first driveway on the left (1st on the map)  The apartment key fits into the lower lock of the column and opens the gate.
 </p>
-          <p>Der Stellplatz ist ungefähr mittig auf der linken Seite und mit der Nummer 23 (Wohnung 7) beschriftet. Über die Tür neben dem Parkplatz kommt ihr ins Treppenhaus. Wenn ihr mit mehr als einem Fahrzeug angereist seid, könnt ihr auch den kostenlosen Parkplatz gegenüber der Wohnung nutzen (2. auf der Karte).
-</p>
-
-          <h2>Schlüssel</h2>
-          <p>Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP. Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum. Unser Tip ist, dass ihr den Schlüssel immer im Safe lasst, wenn ihr nicht in der Wohnung seid.
+          <p>The parking space is approximately in the middle of the left side and marked with the number 23 (apartment 7). Through the door next to the parking lot you can enter the staircase. If you arrived with more than one car, you can also use the free parking lot opposite the apartment (2. on the map).
 </p>
 
-          <h2>Skiraum</h2>
-          <p>Ski- und Snowboardausrüstung bitte im Skiraum abstellen. Nicht mit den Skischuhen durch das Treppenhaus gehen! Rechts vom Eingang findet ihr die Treppe die zum Skiraum führt.
+          <h2>keys</h2>
+          <p>You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand. The key closes the front door of the house and apartment, the underground garage door and the ski room. Our advice is to always leave the key in the safe when you are not in the apartment.
 </p>
 
-          <h2>Spülen</h2>
-          <p>Wir freuen uns, wenn ihr euer Geschirr direkt abspült, damit sich kein Dreck fest setzt.
+          <h2>Ski Room</h2>
+          <p>Please leave your ski and snowboard equipment in the ski room. Not with your ski boots through the staircase go! Right of the entrance you'll find the stairs leading to the ski room.
 </p>
 
-          <h2>Stecker-Adapter & Kabel</h2>
-          <p>Stecker-Adapter, Mehrfachstecker und Verlängerungskabel findet ihr im Wohnzimmer in der Kommode.  In der zweiten Schublade von rechts findet ihr was ihr sucht.
+          <h2>Sink</h2>
+          <p>We are happy if you wash your dishes directly, so that no dirt can settle.
 </p>
 
-          <h2>Telefon</h2>
-          <p>Ihr könnte das Telefon gerne für Telefonate in der Schweiz nutzen. Wenn ihr ins Ausland telefonieren wollt, schmeißt bitte ein paar Franken in die "Wäschekasse" im linken Schrank im großen Schlafzimmer.
+          <h2>plug adapters & cables</h2>
+          <p>Plug adapters, multiple plugs and extension cables can be found in the chest of drawers in the living room.  In the second drawer from the right you will find what you are looking for.
 </p>
 
-          <h2>Wäsche waschen</h2>
-          <p>Im Haus steht eine Waschmaschine und ein Trockner gegen Gebühr zur Verfügung. Die Chip-Karte zur Nutzung von beidem sowie Waschpulver findet ihr im linken Schrank im großen Schlafzimmer. Bitte werft für jeden  Wasch-/Trockengang 5 CHF in die "Wäschkasse", die auch im Schrank steht (oder sagt uns Bescheid, wenn ihr über Paypal/Überweisung bezahlen wollt).
+          <h2>Phone</h2>
+          <p>You might like to use the phone for phone calls in Switzerland. If you want to call abroad, please throw a few francs into the "laundry till" in the left cupboard in the large bedroom.
 </p>
-          <p>Die Waschküche findet ihr im Keller. Am Ende vom Treppenhaus links durch die Tür und gleich wieder links. Bitte beachtet die ausgehängten Anweisungen. Tragt euch vor allem in ausliegende Liste ein (Wohnung 7) und hinterlasst die Waschküche sauber. Zur Bedienung, hier ein <a href="/images/waschen.mp4">kleines Video</a> .
+
+          <h2>Laundry</h2>
+          <p>A washing machine and a dryer are available in the house for a fee. The chip card for use of both as well as washing powder can be found in the left closet in the big bedroom. Please throw for each  Washing/drying 5 CHF in the "laundry cash box", which is also in the cupboard (or let us know if you want to pay via Paypal/bank transfer).
+</p>
+          <p>You will find the laundry room in the basement. At the end of the staircase turn left through the door and immediately left again. Please follow the posted instructions. Please sign in the list (apartment 7) and leave the laundry room clean. For operation, here a <a href="/images/waschen.mp4">small video</a> .
 </p>
 
           <h2>WiFi</h2>
-          <p>Die Zugangsdaten findet ihr auf der Begrüßungskarte vor Ort. Sollte der Router ausgeschaltet sein, einfach den Stecker im Wohnzimmer einstecken und eine Weile warten.
+          <p>You will find the access data on the welcome card on site. If the router is switched off, just plug it in in the living room and wait a while.
 </p>
         </div>
       </div>
