--- a/en/contact.html
+++ b/en/contact.html
@@ -81,8 +81,8 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white">Kontaktiere uns</h1>
-          <p>Wir vermieten unsere Chalet-Wohnung gerne an euch</p>
+          <h1 class="text-white">Contact us</h1>
+          <p>We are happy to let our chalet apartment to you</p>
         </div>
       </div>
     </div>
@@ -103,34 +103,34 @@
             <div class="row form-group">
               <div class="col-md-12 mb-3 mb-md-0">
                 <label class="font-weight-bold" for="fullname">Name</label>
-                <input type="text" id="fullname" class="form-control" placeholder="Dein Name">
+                <input type="text" id="fullname" class="form-control" placeholder="Your name">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="font-weight-bold" for="email">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="Email Addresse">
+                <input type="email" id="email" class="form-control" placeholder="Email address">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
-                <label class="font-weight-bold" for="email">Betreff</label>
-                <input type="text" id="subject" class="form-control" placeholder="Worum geht's?">
+                <label class="font-weight-bold" for="email">Subject</label>
+                <input type="text" id="subject" class="form-control" placeholder="What's up?">
               </div>
             </div>
 
 
             <div class="row form-group">
               <div class="col-md-12">
-                <label class="font-weight-bold" for="message">Nachricht</label>
+                <label class="font-weight-bold" for="message">Message</label>
                 <textarea name="message" id="message" cols="30" rows="5" class="form-control"
-                  placeholder="Grüezi!"></textarea>
+                  placeholder="Hi!"></textarea>
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
-                <input type="submit" value="Abschicken" class="btn btn-primary py-3 px-4">
+                <input type="submit" value="Submit" class="btn btn-primary py-3 px-4">
               </div>
             </div>
 
@@ -140,17 +140,17 @@
 
         <div class="col-lg-4 ml-auto">
           <div class="p-4 mb-3 bg-white">
-            <h3 class="h5 text-black mb-3">Kontakt</h3>
-            <p class="mb-0 font-weight-bold text-black">Inhaber</p>
+            <h3 class="h5 text-black mb-3">Contact</h3>
+            <p class="mb-0 font-weight-bold text-black">Owner</p>
             <p class="mb-4 text-black">Simon & Nicolas Seyer</p>
 
-            <p class="mb-0 font-weight-bold text-black">Adresse</p>
+            <p class="mb-0 font-weight-bold text-black">Address</p>
             <p class="mb-4 text-black">Hubelstrasse 6, 3778 Schönried, Schweiz</p>
 
             <p class="mb-0 font-weight-bold text-black">Phone</p>
             <p class="mb-4"><a href="phone:004915753644129">+49 157 53644129</a></p>
 
-            <p class="mb-0 font-weight-bold text-black">Email-Adresse</p>
+            <p class="mb-0 font-weight-bold text-black">Email address</p>
             <p class="mb-0"><a href="mailto:chalet.schoenried@gmail.com">chalet.schoenried@gmail.com</a></p>
 
           </div>
