--- a/en/info.html
+++ b/en/info.html
@@ -141,8 +141,8 @@
           <p>The parking space is approximately in the middle of the left side and marked with the number 23 (apartment 7). Through the door next to the parking lot you can enter the staircase. If you arrived with more than one car, you can also use the free parking lot opposite the apartment (2. on the map).
 </p>
 
-          <h2>keys</h2>
-          <p>You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand. The key closes the front door of the house and apartment, the underground garage door and the ski room. Our advice is to always leave the key in the safe when you are not in the apartment.
+          <h2>Keys</h2>
+          <p>You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand. The key closes the front door of the house and apartment, the underground garage door and the ski room. When you leave, please leave the key in the safe.  This is also recommended if you leave the apartment during your stay (especially for groups).
 </p>
 
           <h2>Ski Room</h2>
