--- a/info.html
+++ b/info.html
@@ -142,7 +142,7 @@
 </p>
 
           <h2>Schlüssel</h2>
-          <p>Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP. Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum. Unser Tip ist, dass ihr den Schlüssel immer im Safe lasst, wenn ihr nicht in der Wohnung seid.
+          <p>Den Schlüssel findet ihr im Schlüsselsafe neben dem Eingang. Es ist der zweite von der Marke EMIUP. Der Schlüssel schließt die Haus- und Wohnungstür, das Tiefgaragentor sowie den Skiraum. Wenn ihr abreist, lasst den Schlüssel bitte unbedingt im Safe.  Das empfehlen wir auch, wenn ihr während eures Aufenthalts die Wohnung verlasst (gerade für Gruppen).
 </p>
 
           <h2>Skiraum</h2>
