--- a/src/_nav.html
+++ b/src/_nav.html
@@ -21,7 +21,7 @@
                 <a href="#">${{ nav.language }}$</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/${{ _filename_ }}$">Deutsch</a></li>
-                  <li><a href="/en/${{ _filename_ }}$">English (incomplete)</a></li>
+                  <li><a href="/en/${{ _filename_ }}$">English</a></li>
                 </ul>
               </li>
 
