--- a/de/info.html
+++ b/de/info.html
@@ -53,7 +53,7 @@
                 <a href="#">🇩🇪 Sprache</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/info.html">Deutsch</a></li>
-                  <li><a href="/en/info.html">English (incomplete)</a></li>
+                  <li><a href="/en/info.html">English</a></li>
                 </ul>
               </li>
 
