--- a/en/contact.html
+++ b/en/contact.html
@@ -53,7 +53,7 @@
                 <a href="#">🇬🇧 Language</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/contact.html">Deutsch</a></li>
-                  <li><a href="/en/contact.html">English (incomplete)</a></li>
+                  <li><a href="/en/contact.html">English</a></li>
                 </ul>
               </li>
 
