--- a/en/index.html
+++ b/en/index.html
@@ -20,9 +20,6 @@
     <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/css/fl-bigmug-line.css">
 
-
-    <link rel="stylesheet" href="/css/aos.css">
-
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
@@ -76,11 +73,10 @@
   <div class="site-mobile-menu-body"></div>
 </div> <!-- .site-mobile-menu -->
 
-  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');" data-aos="fade"
-    data-stellar-background-ratio="0.5" data-aos="fade">
+  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-8 text-center">
           <h1 class="mb-4">Welcome in Schönried</h1>
           <p class="mb-5">Chalet Gassegüetli</p>
           <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">Book now</a>
@@ -128,7 +124,6 @@
 <script src="/js/jquery.countdown.min.js"></script>
 <script src="/js/jquery.magnific-popup.min.js"></script>
 <script src="/js/bootstrap-datepicker.min.js"></script>
-<script src="/js/aos.js"></script>
 <script src="/js/circleaudioplayer.js"></script>
 
 <script src="/js/main.js"></script>
