--- a/info.html
+++ b/info.html
@@ -20,9 +20,6 @@
     <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="/css/fl-bigmug-line.css">
 
-
-    <link rel="stylesheet" href="/css/aos.css">
-
     <link rel="stylesheet" href="/css/style.css">
 
 </head>
@@ -76,11 +73,10 @@
   <div class="site-mobile-menu-body"></div>
 </div> <!-- .site-mobile-menu -->
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');"
-    data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-7 text-center">
           <h1 class="text-white">Alle Infos zur Wohnung</h1>
           <p>Was ihr vor Ort wissen müsst</p>
         </div>
@@ -202,7 +198,6 @@
 <script src="/js/jquery.countdown.min.js"></script>
 <script src="/js/jquery.magnific-popup.min.js"></script>
 <script src="/js/bootstrap-datepicker.min.js"></script>
-<script src="/js/aos.js"></script>
 <script src="/js/circleaudioplayer.js"></script>
 
 <script src="/js/main.js"></script>
