--- a/src/contact.html
+++ b/src/contact.html
@@ -6,11 +6,10 @@
 
   @@include('_nav.html', {"contact": "active"})
 
-  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_1.jpg');"
-    data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
+  <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/images/hero_bg_1.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-7 text-center">
           <h1 class="text-white">${{ contact.header.title }}$</h1>
           <p>${{ contact.header.subtitle }}$</p>
         </div>
