--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,10 @@
 
   @@include('_nav.html', {"home": "active"})
 
-  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');" data-aos="fade"
-    data-stellar-background-ratio="0.5" data-aos="fade">
+  <div class="site-blocks-cover overlay" style="background-image: url('/images/hero_bg_2.jpg');">
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <div class="col-md-8 text-center" data-aos="fade-up" data-aos-delay="400">
+        <div class="col-md-8 text-center">
           <h1 class="mb-4">${{ index.header.title }}$</h1>
           <p class="mb-5">${{ index.header.subtitle }}$</p>
           <p><a href="https://www.airbnb.de/rooms/43816606" target="_blank" class="btn btn-primary px-5 py-3">${{ index.header.book }}$</a>
