Update home page

--- a/en/index.html
+++ b/en/index.html
@@ -44,7 +44,7 @@
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
               <li class="active"><a href="/en/index.html">Home</a></li>
-              <li class="@@info"><a href="/en/info.html">Apartment Information</a></li>
+              <li class="@@info"><a href="/en/info.html">Apartment Info</a></li>
               <li class="@@contact"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
                 <a href="#">🇬🇧 Language</a>
@@ -91,8 +91,8 @@
     <div class="featured-property-half row">
       <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
       <div class="text col-md-6 col-sm-12">
-        <h2>Under development</h2>
-        <p class="mb-5">This website is still under development.</p>
+        <h2>Guest Info</h2>
+        <p class="mb-5">On our <a href='info.html'>Apartment Info</a> page you find everything you need to know during your visit.</p>
       </div>
     </div>
   </div>
