--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
     <div class="featured-property-half row">
       <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
       <div class="text col-md-6 col-sm-12">
-        <h2>${{ index.in-progress.title }}$</h2>
-        <p class="mb-5">${{ index.in-progress.text }}$</p>
+        <h2>${{ index.info.title }}$</h2>
+        <p class="mb-5">${{ index.info.text }}$</p>
       </div>
     </div>
   </div>
