--- a/en/info.html
+++ b/en/info.html
@@ -44,7 +44,7 @@
 
             <ul class="site-menu js-clone-nav d-none d-lg-block">
               <li class="@@home"><a href="/en/index.html">Home</a></li>
-              <li class="active"><a href="/en/info.html">Apartment Information</a></li>
+              <li class="active"><a href="/en/info.html">Apartment Info</a></li>
               <li class="@@contact"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
                 <a href="#">🇬🇧 Language</a>
