--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     <div class="featured-property-half row">
       <div class="image col-md-6 col-sm-12" style="background-image: url('/images/hero_bg_1.jpg')"></div>
       <div class="text col-md-6 col-sm-12">
-        <h2>Im Aufbau</h2>
-        <p class="mb-5">Diese Website befindet sich gerade noch im Aufbau.</p>
+        <h2>Besucher-Information</h2>
+        <p class="mb-5">In unseren <a href='info.html'>Infos zur Wohnung</a> findet ihr alles, was vor Ort wichtig ist.</p>
       </div>
     </div>
   </div>
