Reduced number of scripts and stylesheets

--- a/src/_nav.html
+++ b/src/_nav.html
@@ -18,7 +18,7 @@
               <li class="@@info"><a href="/${{ _lang_ }}$/info.html">${{ nav.info }}$</a></li>
               <li class="@@contact"><a href="/${{ _lang_ }}$/contact.html">${{ nav.contact }}$</a></li>
               <li class="has-children">
-                <a href="#">${{ nav.language }}$</a>
+                <a href="#" class="collapse-link">${{ nav.language }}$</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/${{ _filename_ }}$">Deutsch</a></li>
                   <li><a href="/en/${{ _filename_ }}$">English</a></li>
