--- a/en/contact.html
+++ b/en/contact.html
@@ -10,15 +10,8 @@
     <link rel="stylesheet" href="/fonts/icomoon/style.css">
 
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/css/magnific-popup.css">
-    <link rel="stylesheet" href="/css/jquery-ui.css">
-    <link rel="stylesheet" href="/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="/css/mediaelementplayer.css">
-    <link rel="stylesheet" href="/css/animate.css">
-    <link rel="stylesheet" href="/fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="/css/fl-bigmug-line.css">
+  
+   
 
     <link rel="stylesheet" href="/css/style.css">
 
@@ -47,7 +40,7 @@
               <li class="@@info"><a href="/en/info.html">Apartment Info</a></li>
               <li class="active"><a href="/en/contact.html">Contact</a></li>
               <li class="has-children">
-                <a href="#">🇬🇧 Language</a>
+                <a href="#" class="collapse-link">🇬🇧 Language</a>
                 <ul class="dropdown arrow-top">
                   <li><a href="/de/contact.html">Deutsch</a></li>
                   <li><a href="/en/contact.html">English</a></li>
@@ -171,18 +164,7 @@
     </div>
 </footer>
 
-<script src="/js/jquery-3.3.1.min.js"></script>
-<script src="/js/jquery-migrate-3.0.1.min.js"></script>
-<script src="/js/jquery-ui.js"></script>
-<script src="/js/popper.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/owl.carousel.min.js"></script>
-<script src="/js/mediaelement-and-player.min.js"></script>
-<script src="/js/jquery.stellar.min.js"></script>
-<script src="/js/jquery.countdown.min.js"></script>
-<script src="/js/jquery.magnific-popup.min.js"></script>
-<script src="/js/bootstrap-datepicker.min.js"></script>
-<script src="/js/circleaudioplayer.js"></script>
+
 
 <script src="/js/main.js"></script>
 
