Updated key information

--- a/en/info.html
+++ b/en/info.html
@@ -131,7 +131,9 @@
 </p>
 
           <h2>Keys</h2>
-          <p>You can find the key in the key safe next to the entrance. It is the second one from the EMIUP brand. The key closes the front door of the house and apartment, the underground garage door and the ski room. When you leave, please leave the key in the safe.  This is also recommended if you leave the apartment during your stay (especially for groups).
+          <p>You can find the key in the key safe next to the entrance (EMIUP brand).  You will receive the code after your booking via the AirBnB App.
+</p>
+          <p>The key closes the front door of the house and apartment, the underground garage door and the ski room. When you leave, please leave the key in the safe.  We also recommend this if you leave the apartment during your stay (especially for groups).
 </p>
 
           <h2>Ski Room</h2>
