--- a/src/info.html
+++ b/src/info.html
@@ -59,7 +59,8 @@
           <p>${{ info.parking.text2 }}$</p>
 
           <h2>${{ info.keys.title }}$</h2>
-          <p>${{ info.keys.text }}$</p>
+          <p>${{ info.keys.text1 }}$</p>
+          <p>${{ info.keys.text2 }}$</p>
 
           <h2>${{ info.ski.title }}$</h2>
           <p>${{ info.ski.text }}$</p>
