--- a/src/info.html
+++ b/src/info.html
@@ -36,6 +36,11 @@
           <p>${{ info.tv.text1 }}$</p>
           <p>${{ info.tv.text2 }}$</p>
 
+          <h2>${{ info.guest_card.title }}$</h2>
+          <p>${{ info.guest_card.text1 }}$</p>
+          <p>${{ info.guest_card.text2 }}$</p>
+          <p>${{ info.guest_card.text3 }}$</p>
+
           <h2>${{ info.additional_equipment.title }}$</h2>
           <p>${{ info.additional_equipment.text }}$</p>
 
