--- a/info.html
+++ b/info.html
@@ -4,6 +4,10 @@
     <title>Chalet Gassegüetli in Schönried</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
@@ -18,7 +22,7 @@
 </head>
 
 <body>
-<!-- trace:src/info.html -->
+<!-- trace:src\info.html -->
 
   <div class="site-wrap">
 
