--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="font-weight-bold" for="email">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="Email Addresse">
+                <input type="email" id="email" class="form-control" placeholder="Email-Adresse">
               </div>
             </div>
             <div class="row form-group">
